TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Improved socket performance (would be nice if we could be used as a "hub")
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2009-08-30 MickeM
 + Added -c and -d command line options like so:
   NSClient++ -c CheckFile2 path=c:\test pattern=*.txt MaxCrit=1 filter+written=gt:2h
   NSClient++ -c <command> <argument 1> <argument 2> ...
   -d Is the same thing but with debug enabled.
 + Added uninstall of old client (sort of broken but works)

2009-08-29 MickeM
 * Fixed issue with CheckFile (directory)
 * Rewrote the CA:s in the installer to work "better" (hopefully) in general it should be have more like a propper installer.

2009-07-18 MickeM
 * Fixed issue with no loggers avalible and "memory leak"
 * Added "firewall exception" to installer
 * Fixed an issue with the socket data buffer
 * Added new option to NSC.ini [NSCA] socket_timeout=30 (timeout in seconds when reading from NSCA sockets)
 * Fixed issue with NSCA socket.

2009-07-05 MickeM
 * Fixed issue with CheckExternalScripts and script_dir: not adding the commands properly.
 * Fixed issue with CheckExternalScripts and script_dir: not using relative paths (#310).

2009-06-20 MickeM
 * Fixed issue with CheckDisk and paths not working out properly

2009-06-10 MickeM - 0.3.6
 ! Release the new version

2009-06-10 MickeM 
 * Fixed so CheckEventLog only reports invalid buffersizes once

2009-06-07 MickeM 
 * Fixed issue with CheckFileAge incorrectly working in recursive mode.
 * Finalized the installer

2009-05-22 MickeM 
 * Fixed time_delay option in NSCA config (now uses the correct base was 1000 times to large before)

2009-05-21 MickeM 
 * Fixed issue with eventlog parsing and 64 bit machines (descriptions option)