@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,7,257
-#define PRODUCTVER     0,3,7,257
-#define STRFILEVER     _T("0.3.7.257")
-#define STRPRODUCTVER  _T("0.3.7.257")
+#define FILEVER        0,3,7,279
+#define PRODUCTVER     0,3,7,279
+#define STRFILEVER     _T("0.3.7.279")
+#define STRPRODUCTVER  _T("0.3.7.279")
 #define STRPRODUCTDATE  _T("2009-09-06")
 #endif // AUTOBUILD_H
